hello-kubernetes-first.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-kubernetes-first
  # namespace: dev
spec:
  # type: LoadBalancer
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
    # nodePort: 35010
  selector:
    app: hello-kubernetes-first

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-kubernetes-first
  # namespace: dev
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hello-kubernetes-first
  template:
    metadata:
      labels:
        app: hello-kubernetes-first
    spec:
      containers:
        - name: hello-kubernetes
          image: paulbouwer/hello-kubernetes:1.8
          ports:
          - containerPort: 8080
