ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-kubernetes-ingress
  # namespace: dev
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: "hello.com"
    http:
      paths:
      - pathType: Prefix
        path: "/*"
        backend:
          service:
            name: hello-kubernetes-first
            port:
              number: 80
status:
  loadBalancer: {}
